# mcp-rag

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mcp.json  pyproject.toml  requirements-prod.txt  requirements.txt
.github/workflows/: ci.yml
data/corpus/: authentication.md  billing.md  data_retention.md  incident_runbook.md  rate_limits.md  sdk_python.md  security.md  webhooks.md
docs/: ARCHITECTURE.md  IMPROVEMENTS.md  RESULTS.md
eval/: qa_gold.json
scripts/: demo_query.py  run_eval.py
src/mcprag/: __init__.py  config.py  evaluation.py  ingest.py  rag.py  schemas.py  server.py
src/mcprag/embeddings/: __init__.py  base.py  local_lsa.py  neural.py
src/mcprag/generator/: __init__.py  base.py  extractive.py  llm.py
src/mcprag/index/: __init__.py  vector_store.py
tests/: test_eval.py  test_rag.py
